--- a/proto1.tex
+++ b/proto1.tex
@@ -278,7 +278,7 @@ Consider the language \yyy{below}{in Figure~\ref{tab:closed-terms}} which has be
 \cite{prolog-lib}\yyy{,}{.}
 
 \begin{figure}
-\begin{minted}[linenos]{haskell}	
+\begin{minted}[linenos]{haskell}   
   data VariableName = VariableName Int String
   deriving (Eq, Data, Typeable, Ord)
   data Atom         = Atom      !String
@@ -339,13 +339,13 @@ Also one cannot create Quantifiers plus logic
 The solution to would be to add a type constructor split the data type into two levels, a single recursive
 data type is replaced by two related data types.
 Consider the following,\par
-\begin{minted}[linenos]{haskell}
-data FlatTerm a = 
-		 Struct Atom [a]
-	|	Var VariableName
-	|	Wildcard
-	|	Cut Int deriving (Show, Eq, Ord)
-\end{minted}
+  \begin{minted}[gobble=3,linenos]{haskell}
+    data FlatTerm a = Struct Atom [a]
+                    | Var VariableName
+                    | Wildcard
+                    | Cut Int
+               deriving (Show, Eq, Ord)
+  \end{minted}
 
 One result of the approach is that the non-recursive type
 \textit{FlatTerm} is modular and generic as the structure
@@ -441,17 +441,17 @@ the scenario where the language needs to accommodate additional type of terms,
 \begin{enumerate}
 \item Manually modifying the structure of the language,
 \begin{minted}[linenos]{haskell}
-type Atom         	= String
+type Atom            = String
 
-data VariableName 	= VariableName Int String
+data VariableName    = VariableName Int String
       deriving (Eq, Data, Typeable, Ord)
 
-data Term 			= Struct Atom [Term]
-          			| Var VariableName
-          			| Wildcard  
-          			| Cut Int
-          			| New_Constructor_1 .........
-          			| New_Constructor_2 .........
+data Term          = Struct Atom [Term]
+                   | Var VariableName
+                   | Wildcard  
+                   | Cut Int
+                   | New_Constructor_1 .........
+                   | New_Constructor_2 .........
       deriving (Eq, Data, Typeable)
       
 \end{minted}
@@ -526,24 +526,24 @@ between a functor and a monad.
 We create the necessary instances as follows,
 \begin{minted}[linenos]{haskell}
 instance Functor (FlatTerm) where
-	fmap = T.fmapDefault
+   fmap = T.fmapDefault
 
 instance Foldable (FlatTerm) where
- 	foldMap = T.foldMapDefault
+    foldMap = T.foldMapDefault
 
 instance Traversable (FlatTerm) where
-  	traverse f (Struct atom x)	=	Struct atom <$> 
-  				sequenceA (Prelude.map f x)
-  	traverse _ (Var v)	=	pure (Var v)
-  	traverse _ Wildcard	=	pure (Wildcard)
-  	traverse _ (Cut i)	= 	pure (Cut i)
+     traverse f (Struct atom x)   =   Struct atom <$> 
+              sequenceA (Prelude.map f x)
+     traverse _ (Var v)   =   pure (Var v)
+     traverse _ Wildcard   =   pure (Wildcard)
+     traverse _ (Cut i)   =    pure (Cut i)
 
 instance Applicative (FlatTerm) where
-	pure x = Struct "" [x] 
-	_ <*> Wildcard	= 	Wildcard
-	_ <*> (Cut i) 	= 	Cut i
-	_ <*> (Var v)	=	(Var v)
-	(Struct a fs) <*> (Struct b xs) = Struct (a ++ b) [f x | f <- fs, x <- xs] 
+   pure x = Struct "" [x] 
+   _ <*> Wildcard   =    Wildcard
+   _ <*> (Cut i)    =    Cut i
+   _ <*> (Var v)   =   (Var v)
+   (Struct a fs) <*> (Struct b xs) = Struct (a ++ b) [f x | f <- fs, x <- xs] 
 \end{minted}
 
 The above lay the foundation to work with the library. Coming back to the library, the language must have the Unifiable instance. This works
@@ -557,16 +557,16 @@ unification, subsumption, etc
 \begin{minted}[linenos]{haskell}
 
 instance Unifiable (FlatTerm) where
-	zipMatch (Struct al ls) (Struct ar rs) = 
-		if (al == ar) && (length ls == length rs) 
-			then Struct al <$> 
-				pairWith (\l r -> Right (l,r)) ls rs  		
-			else Nothing
-	zipMatch Wildcard _ = Just Wildcard
-	zipMatch _ Wildcard = Just Wildcard
-	zipMatch (Cut i1) (Cut i2) = if (i1 == i2) 
-		then Just (Cut i1) 
-		else Nothing
+   zipMatch (Struct al ls) (Struct ar rs) = 
+      if (al == ar) && (length ls == length rs) 
+         then Struct al <$> 
+            pairWith (\l r -> Right (l,r)) ls rs        
+         else Nothing
+   zipMatch Wildcard _ = Just Wildcard
+   zipMatch _ Wildcard = Just Wildcard
+   zipMatch (Cut i1) (Cut i2) = if (i1 == i2) 
+      then Just (Cut i1) 
+      else Nothing
 
 \end{minted}
 
@@ -609,15 +609,15 @@ variables and then convert them into a dictionary consisting of a free variable 
 \begin{minted}[linenos]{haskell}
 variableExtractor :: Fix FlatTerm -> [Fix FlatTerm]
 variableExtractor (Fix x) = case x of
-	(Struct _ xs) ->	Prelude.concat $ Prelude.map variableExtractor xs
-	(Var v)		->	[Fix $ Var v]
-	_			->	[] 
+   (Struct _ xs) ->   Prelude.concat $ Prelude.map variableExtractor xs
+   (Var v)      ->   [Fix $ Var v]
+   _         ->   [] 
 
 variableNameExtractor :: Fix FlatTerm -> [VariableName]
 variableNameExtractor (Fix x) = case x of
-	(Struct _ xs)	-> Prelude.concat $ Prelude.map variableNameExtractor xs
-	(Var v)			-> [v]
-	_ 				-> []	
+   (Struct _ xs)   -> Prelude.concat $ Prelude.map variableNameExtractor xs
+   (Var v)         -> [v]
+   _             -> []   
 
 variableSet :: [Fix FlatTerm] -> S.Set (Fix FlatTerm)
 variableSet a = S.fromList a
@@ -643,12 +643,12 @@ uTermify
   -> UTerm FlatTerm (ST.STVar s (FlatTerm)) 
   -> UTerm FlatTerm (ST.STVar s (FlatTerm))
 uTermify varMap ux = case ux of
-  UT.UVar _          		-> ux
-  UT.UTerm (Var v)  		-> maybe (error "bad map") UT.UVar $ Map.lookup v varMap
- -- UT.UTerm t         		-> UT.UTerm $! fmap (uTermify varMap) 
-  UT.UTerm (Struct a xs)	-> UT.UTerm $ Struct a $! fmap (uTermify varMap) xs  	
-  UT.UTerm (Wildcard)		-> UT.UTerm Wildcard
-  UT.UTerm (Cut i)			-> UT.UTerm (Cut i)
+  UT.UVar _                -> ux
+  UT.UTerm (Var v)        -> maybe (error "bad map") UT.UVar $ Map.lookup v varMap
+ -- UT.UTerm t               -> UT.UTerm $! fmap (uTermify varMap) 
+  UT.UTerm (Struct a xs)   -> UT.UTerm $ Struct a $! fmap (uTermify varMap) xs     
+  UT.UTerm (Wildcard)      -> UT.UTerm Wildcard
+  UT.UTerm (Cut i)         -> UT.UTerm (Cut i)
 
 translateToUTerm ::
     Fix FlatTerm -> ST.STBinding s
