removed merge markers.

--- a/proto1.tex
+++ b/proto1.tex
@@ -579,13 +579,13 @@ instance Unifiable (FlatTerm) where
 
 \end{minted}
 
-<<<<<<< HEAD
 \paragraph{Logic Variables}
-=======
 Unification involves side effects of binding logic variables to terms. To allow and keep track of these effects we use the Binding Monad 
 which provides facilities to generate fresh logic variables and perform look ups on dictionaries. By default two logic variable 
-implementations exist,
->>>>>>> Added unification part to proto 1, removed unnecessary chapters prologin, prologinhaskell
+implementations exist,\endnote{%
+  In this immediate region, I (dgc) removed text inserted by a failed push or pull merge.
+  Check to see that it is correct, or reverse commit \texttt{aaaaa\dots}.
+}
 
 \begin{enumerate}
 \item The IntVar implementation uses Int as the names of variables, and uses an 
