--- a/proto1.tex
+++ b/proto1.tex
@@ -315,10 +315,16 @@ The \xxx{above} data type \yyy{}{Figure~\ref{tab:closed-terms}} is recursive as 
 \end{comment}
 
 \yyy{The above}{Figure~\ref{tab:closed-terms}} is a classic example of a recursive grammar to define the
-abstract syntax of a language.
-One of the issues with the above is that it is not possible to distinguish the structure of the data from the
+abstract syntax of a language.\endnote{%
+  ``is a classic example of \yyy{}{using a recursive data type} \xxx{a recursive grammar} to define the
+abstract syntax of a language.'' --- perhaps?
+}
+One of the issues with the above \yyy{}{datatype} is that it is not possible to distinguish the structure of the data from the
 data type itself \cite{sheard2004two}.
-Moreover, the primitives of the language are not accessible as the language can have expressions of only one
+Moreover, the primitives of the language\endnote{%
+  What do you mean by ``primitives of the language''?
+}
+are not accessible as the language can have expressions of only one
 type i.e.
 "Term".
 
@@ -336,9 +342,12 @@ data Term = Struct Atom [Term]
 Also one cannot create Quantifiers plus logic
 \end{comment}
 
-The solution to would be to add a type constructor split the data type into two levels, a single recursive
-data type is replaced by two related data types.
-Consider the following,\par
+The solution \xxx{to} would be to add a type constructor split the data type into two levels, a single recursive
+data type is replaced by two related data types.\endnote{%
+  I cannot follow this sentence.
+}
+Consider the \yyy{\mbox{following},}{code in Figure~\ref{tab:non-recurse}.}
+\begin{figure}
   \begin{minted}[gobble=3,linenos]{haskell}
     data FlatTerm a = Struct Atom [a]
                     | Var VariableName
@@ -354,7 +363,7 @@ One result of the approach is that the non-recursive type
 \textit{FlatTerm} is modular and generic as the structure
 "FlatTerm"\endnote{%
   You have `\textit{FlatTerm}' and `"FlatTerm"'.  Why not \texttt{FlatTerm} or better yet
-  \texttt{\csname @backslashcar\endcsname code\{FlatTerm\}}, where \texttt{\csname @backslashcar\endcsname code} is a macro you define.
+  \texttt{\csname @backslashchar\endcsname code\{FlatTerm\}}, where \texttt{\csname @backslashchar\endcsname code} is a macro you define.
 }
 is separate
 from it's\endnote{%
@@ -483,6 +492,32 @@ T (Struct 'atom' [Abox, T (Cut 0)])
 is possible. Since we needed the fixed point of the language we used \textit{Fix} but generically one could add multiple custom
 functionality.
 
+%%====================================================================%%
+%% -- begin code inserted by David                                 -- %%
+%---------------------------------------------------------------------%%
+\begin{center}
+  \textcolor{blue}{\rule{\0.95\textwidth}{0.2em}}\\[-1ex]
+  text from David
+\end{center}
+Why not continue the example that you started in Figure~\ref{tab:man-enhan-gram}?
+That is use code something like that in Figure~\ref{tab:garfunkle}, and show how
+\Verb!Extended FlatTerm! is isomorphic to \Verb!Term! from Figure~\ref{tab:man-enhan-gram}?
+\begin{figure}[h]
+  \rule{0.98\textwidth}{0.3pt}
+  \begin{minted}[linenos,gobble=2]{haskell}
+    data Extended f  = New_Constructor_1 ...
+                     | New_Constructor_2 ....
+                     | Base (f (Extended f))
+  \end{minted}
+  \caption{garfunkle}
+  \label{tab:garfunkle}
+  \rule{0.98\textwidth}{0.3pt}
+\end{figure}
+
+\noindent\textcolor{blue}{\rule{\0.95\textwidth}{0.25pt}}
+%---------------------------------------------------------------------%%
+%% -- end code inserted by David                                   -- %%
+%%====================================================================%%
 
 \section{Working with the language / Making language compatible with unification-fd}
 
@@ -533,9 +568,12 @@ Enter, \Verb[formatcom=\bf]!Traversable!, %}{
 it allows reduce whilst preserving the shape of the structure. Lastly, the Applicative instance is an intermediate
 between a functor and a monad.
 
-We create the necessary instances as follows,
-\begin{minted}[linenos]{haskell}
-\end{minted}
+We create the necessary instances\endnote{%
+  I am deeply suspicious of the instance for \texttt{Applicative} given.
+}
+as \yyy{follows,}{shown in Figure~\ref{tab:flat-term-class-inst}.}
+\begin{figure}
+  \begin{minted}[linenos,gobble=4]{haskell}
     instance Functor (FlatTerm) where
       fmap = T.fmapDefault
 
@@ -588,7 +626,7 @@ Unification involves side effects of binding logic variables to terms. To allow 
 which provides facilities to generate fresh logic variables and perform look ups on dictionaries. By default two logic variable
 implementations exist,\endnote{%
   In this immediate region, I (dgc) removed text inserted by a failed push or pull merge.
-  Check to see that it is correct, or reverse commit \texttt{aaaaa\dots}.
+  Check to see that it is correct, or reverse commit \texttt{95804e3\dots}.
 }
 
 \begin{enumerate}
